Fix iPad overflow

--- a/Folio.nnwtheme/stylesheet.css
+++ b/Folio.nnwtheme/stylesheet.css
@@ -491,10 +491,6 @@ a.footnote:hover,
   body {
     margin-top: 3px;
     margin-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    word-break: break-word;
-    hyphens: auto;
     -webkit-text-size-adjust: none;
   }
 
